--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,9 +6,7 @@
 @use "body";
 @use "wrap";
 @use "header";
-@use "searchBar";
 @use "menu";
-@use "main";
-@use "btns";
-@use "smallNav";
+@use "explore";
 @use "topNav";
+@use "main";
