--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,22 +1,114 @@
 @use "./mixins" as m;
 @use "./vars" as v;
 
+// Header Background
+.header-bg {
+  grid-column: 1 / -1;
+  background-image: url("../images/header.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  height: 100dvh;
+}
+
 .header {
   border: 2px solid rgb(0, 255, 30);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr auto;
+  grid-template-rows: 2fr 1fr auto;
+  grid-template-areas: "b1" "scroll" "nav";
 
   .block1 {
-    grid-area: 1 / 1 / span 3 / 2;
+    grid-area: b1;
     display: flex;
-    border: 2px solid rgb(255, 0, 255);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    // border: 2px solid rgb(255, 0, 255);
+
+    &__h1 {
+      text-transform: uppercase;
+      font-size: v.$rem-48;
+      font-weight: v.$fw1-b;
+      letter-spacing: v.$rem-5;
+      line-height: v.$rem-26;
+    }
+
+    &__txt {
+      font-size: v.$rem-22;
+      letter-spacing: v.$rem-7;
+      line-height: v.$rem-26;
+      padding-bottom: v.$rem-24;
+      text-transform: capitalize;
+    }
   }
 
-  .nav-wrap {
-    grid-area: 4 / 1 / 5 / 2;
-    border: 2px solid rgb(255, 0, 255);
+  .nav-scroll { grid-area: scroll; }
+
+
+
+.form {
+  // border: 2px solid rgb(255, 0, 255);
+  display: flex;
+  flex-wrap: wrap;
+  max-width: v.$rem-653;
+  width: 100%;
+  min-height: v.$rem-63;
+  &__ipt {
+    width: 70%;
+    height: 100%;
+    border: none;
+    &::placeholder{
+      font-size: v.$rem-14;
+      letter-spacing: v.$rem-2;
+      text-transform: capitalize;
+      text-align: center ;
+      color: v.$search-c;
+    }
   }
+  &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: v.$rem-14;
+    font-weight: v.$fw2-r;
+    width: 30%;
+    height: 100%;
+    border: v.$rem-2 solid v.$fc;
+    text-transform: uppercase;
+    gap: v.$rem-10;
+    padding-left: v.$rem-20;
+    i {
+      font-size: v.$rem-22;
+    }
+}
+}
+
+.nav-scroll {
+  // border: 2px solid rgb(255, 0, 255);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: v.$rem-20 0 0 0;
+
+  &__link {
+    font-family: inherit;
+    font-weight: v.$fw1-l;
+    font-size: v.$rem-14;
+  }
+
+  &__txt {
+    margin: 0;
+    padding: 0;
+    letter-spacing: v.$rem-3;
+  }
+
+  i {
+    margin: 0;
+    padding: 0;
+  }
+}
 }
