--- a/styles/_wrap.scss
+++ b/styles/_wrap.scss
@@ -3,13 +3,41 @@
 
 // Page Wrapper
 .wrap {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   border: 2px solid red;
   width: 100%;
   margin: 0 auto;
   padding: 0;
   min-height: v.$wrp-h;
-  gap: 0;
+  display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      ". head ."
+      ". main ."
+      // ". block2 ."
+      // ". block3 ."
+      // ". block4 ."
+      // ". block5 ."
+      // ". block6 ."
+      ". footer .";
+
+    .header { grid-area: head;}
+
+    .main { grid-area: main;}
+
+    // .block2 { grid-area: block2; }
+
+    // .block3 { grid-area: block3; }
+
+    // .block4 { grid-area: block4; }
+
+    // .block5 { grid-area: block5; }
+
+    // .block6 { grid-area: block6; }
+
+    .footer { grid-area: footer;}
 }
+
 
