--- a/styles/_explore.scss
+++ b/styles/_explore.scss
@@ -1,56 +1,102 @@
 @use "vars" as v;
 
-// Block 2: explore
-.block2 {
-  border: 2px solid rgb(0, 255, 30);
-  width: 100%;
-  min-height: 100vh;
-  display: grid;
+/* =)========= BLOCK 2: Explore =========(= */
 
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-column-gap: v.$rem-16;
-  grid-template-areas:
-  "c1 c2"
-  "c1 c3";
+.block2-wrap {
+  width: v.$pct;
 
-  .card1 {
-    display: flex;
-    flex-direction: column;
+  .block2-top {
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
     gap: v.$rem-40;
-    border: 2px solid rgb(255, 0, 238);
-    max-width: v.$rem-562;
-    width: v.$pct;
-    height: fit-content;
-    grid-area: c1;
-    &__h2 {
+    align-items: start;
+
+    .card1 {
+      display: grid;
+      gap: v.$rem-20;
+      max-width: 75ch;
+
+      &__h2 {
+        font-family: v.$ff-2;
+        font-size: clamp(v.$rem-24, 3.5vm, v.$rem-36);
+        font-weight: v.$fw2-r;
+      }
+
+      &__txt {
+        font-family: v.$ff-1;
+        font-size: clamp(v.$rem-14, 1.2vm, v.$rem-18);
+        font-weight: v.$fw1-l;
+        letter-spacing: v.$rem-1_6;
+
+        &--1 {
+          margin-bottom: v.$rem-10;
+        }
+      }
+
+      &__btn {
+        max-width: v.$rem-228;
+        width: v.$pct;
+        min-height: v.$rem-63;
+
+      }
+    }
+
+    .card2 {
+      display: grid;
+      gap: v.$rem-20;
+      align-content: start;
+
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
+
+      &__img1 {
+        justify-self: start;
+      }
+
+      &__img2 {
+        justify-self: end;
+      }
+    }
+  }
+
+  .block2-btm {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: v.$rem-40;
+    align-items: center;
+    color: v.$fc;
+
+    i {
+      font-size: v.$rem-48;
+    }
+
+    > * {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: v.$rem-10;
+    }
+    .card4__txt {
       font-family: v.$ff-2;
       font-size: v.$rem-36;
       font-weight: v.$fw2-r;
     }
 
-    &__txt {
-      font-family: v.$ff-1;
-      font-size: v.$rem-16;
-      font-weight: v.$fw1-l ;
-
-      letter-spacing: v.$rem-1_6;
-      &--1{ padding-bottom: v.$rem-20; }
-    }
-
-    &__btn {
+    .card4__search i {
+      color: v.$fa-search;
 
     }
-  }
 
-  .card2 {
-    grid-area: c2;
-  }
-
-  .card3 {
-    grid-area: c3;
-  }
-
+    .card4__select  i {
+        color: v.$fa-select
+    }
+      }
+      .card4__enjoy i {
+        color: v.$fa-thumb
+      }
 }
+
