--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,35 +1,44 @@
 @use "vars" as v;
 @use "mixins" as m;
 
-// .main {
-//   display: grid;
-//   grid-template-rows: repeat(5, auto);
-//   width: 100%;
-//   grid-template-areas:
-//     ". block2 ."
-//     ". block3 ."
-//     ". block4 ."
-//     ". block5 ."
-//     ". block6 .";
+/* =)========= MAIN =========(= */
 
-//     .block2 {
-//       grid-area: block2;
-//     }
+.main {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 
-//     .block3 {
-//       grid-area: block3;
-//     }
+  /* background containers */
+  .block2-bg1,
+  .block2-bg2,
+  .block3-bg1,
+  .block3-bg2,
+  .block4-bg {
+    width: 100vw;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    padding-block: clamp(4rem, 8vw, 12rem);
+  }
 
-//     .block4 {
-//       grid-area: block4;
-//     }
+  /* background images */
+  .block2-bg1 { background-image: url("../images/exploreBg.svg"); }
+  .block2-bg2 { background-color: #333; }
+  .block3-bg1 { background-image: url("../images/book1.svg"); }
+  .block3-bg2 { background-image: url("../images/book2.svg"); }
+  .block4-bg { background-image: url("../images/review-bg.svg"); }
 
-//     .block5 {
-//       grid-area: block5;
-//     }
-
-//     .block6 {
-//       grid-area: block6;
-//     }
-//   }
-
+  .block2-top,
+  .block2-btm,
+  .block3-top,
+  .block3-btm,
+  .block4 {
+    width: min(90%, v.$vp-wide);
+    margin: 0 auto;
+  }
+}
