--- a/styles/_wrap.scss
+++ b/styles/_wrap.scss
@@ -1,43 +1,63 @@
 @use "vars" as v;
 @use "mixins" as m;
 
-// Page Wrapper
+/* =)========= WRAP =========(= */
+
 .wrap {
-  // display: flex;
-  // flex-direction: column;
-  border: 2px solid red;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-  min-height: v.$wrp-h;
-  display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas:
-      ". head ."
-      ". main ."
-      // ". block2 ."
-      // ". block3 ."
-      // ". block4 ."
-      // ". block5 ."
-      // ". block6 ."
-      ". footer .";
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+  min-height: 100vh;
 
-    .header { grid-area: head;}
+  /* header/footer backgrounds */
+  .header-bg,
+  .footer-bg {
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-    .main { grid-area: main;}
+    .header-bg {
+      background-image: url("../images/header.svg");
+      min-height: 100dvh;
+    }
 
-    // .block2 { grid-area: block2; }
+    .footer-bg {
+      background-color: #000;
+    }
 
-    // .block3 { grid-area: block3; }
-
-    // .block4 { grid-area: block4; }
-
-    // .block5 { grid-area: block5; }
-
-    // .block6 { grid-area: block6; }
-
-    .footer { grid-area: footer;}
-}
+    .header,
+    .footer {
+      width: min(90%, v.$vp-wide);
+      margin: 0 auto;
+    }
+  }
 
 
+// @media screen and (max-width: v.$vp-mid) and (orientation: portrait) {
+//   .wrap {
+//     width: min(v.$pct-90, v.$pw-img2);
+//     min-height: 100vh;
+//     min-height: 100dvh;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     margin-top: 0;
+//   }
+// }
+
+// /* Phone */
+// @media screen and (max-width: v.$vp-small) and (orientation: portrait) {
+//   .wrap {
+//     width: min(v.$pct, 32rem);
+//     min-height: 100vh;
+//     min-height: 100dvh;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     margin-top: 0;
+//   }
+// }
